# rust-os

./: .gitignore  Cargo.toml  Dockerfile  LICENSE  Makefile  i686-haribote.json  kernel.ld
.circleci/: config.yml
asm/: asmhead.asm  ipl.asm
src/: desctable.rs  font.rs  interrupt.rs  io.rs  lib.rs  palette.rs  screen.rs  utils.rs
utils/fontgen/: .gitignore  generate.py
vm.vmwarevm/: startMenu.plist  vm.nvram  vm.plist  vm.vmx  vm.vmxf
vm.vmwarevm/vm.vmx.lck/: M35790.lck
